Application/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loglens-backend
  namespace: loglens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loglens-backend

  template:
    metadata:
      labels:
        app: loglens-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"

    spec:
      containers:
        - name: backend
          image: 432995435807.dkr.ecr.ap-south-1.amazonaws.com/cu-final/backend:latest

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
