Application/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loglens-backend-stable
  namespace: loglens

spec:
  selector:
    app: loglens-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: loglens-backend-canary
  namespace: loglens

spec:
  selector:
    app: loglens-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
