Application/k8s/backend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loglens-backend-ingress
  namespace: loglens
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/load-balancer-name: shared-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: loglens.dealshare.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: loglens-backend
                port:
                  number: 80
